--- a/administration-service/pom.xml
+++ b/administration-service/pom.xml
@@ -59,6 +59,12 @@
             <artifactId>keycloak-admin-client</artifactId>
             <version>23.0.7</version>
         </dependency>
+        <dependency>
+            <groupId>org.jetbrains</groupId>
+            <artifactId>annotations</artifactId>
+            <version>13.0</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 </project>
