--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
         <module>user-service</module>
         <module>discovery-service</module>
         <module>administration-service</module>
+        <module>scene-service</module>
     </modules>
     <properties>
         <java.version>21</java.version>
