--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
         <module>discovery-service</module>
         <module>administration-service</module>
         <module>scene-service</module>
+        <module>forum-service</module>
     </modules>
     <properties>
         <java.version>21</java.version>
