--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     </parent>
     <groupId>hu.StudentSpace</groupId>
     <artifactId>API</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>0.1</version>
     <packaging>pom</packaging>
     <name>API</name>
     <description>API Server implementation for StudentSpace app</description>
@@ -27,6 +27,10 @@
         <maven.compiler.source>21</maven.compiler.source>
         <maven.compiler.target>21</maven.compiler.target>
         <spring-cloud.version>2023.0.0</spring-cloud.version>
+        <!--suppress UnresolvedMavenProperty -->
+        <dockerusername>${env.DOCKER_USERNAME}</dockerusername>
+        <!--suppress UnresolvedMavenProperty -->
+        <dockerpassword>${env.DOCKER_USERNAME}</dockerpassword>
     </properties>
     <dependencies>
         <dependency>
@@ -63,6 +67,45 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+            <plugin>
+                <groupId>com.google.cloud.tools</groupId>
+                <artifactId>jib-maven-plugin</artifactId>
+                <version>3.4.2</version>
+                <configuration>
+                    <from>
+                        <image>eclipse-temurin:21-jre</image>
+                        <auth>
+                            <username>${dockerusername}</username>
+                            <password>${dockerpassword}</password>
+                        </auth>
+                        <platforms>
+                            <platform>
+                                <architecture>amd64</architecture>
+                                <os>linux</os>
+                            </platform>
+                            <platform>
+                                <architecture>arm64</architecture>
+                                <os>linux</os>
+                            </platform>
+                        </platforms>
+                    </from>
+                    <to>
+                        <image>registry.hub.docker.com/tdadarkangel/${project.artifactId}:${project.version}</image>
+                        <auth>
+                            <username>${dockerusername}</username>
+                            <password>${dockerpassword}</password>
+                        </auth>
+                    </to>
+                </configuration>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>dockerBuild</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
