--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -27,7 +27,7 @@ jobs:
         distribution: 'temurin'
         cache: maven
     - name: Build with Maven
-      run: mvn -Ddockerusername=${{ secrets.GITHUB_DOCKER_USERNAME }} -Ddockerpassword=${{ secrets.GITHUB_DOCKER_PASSWORD }} clean compile jib:build -e
+      run: mvn -Ddockerusername=${{ secrets.DOCKER_USERNAME }} -Ddockerpassword=${{ secrets.DOCKER_PASSWORD }} clean compile jib:build -e
 
     # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
     - name: Update dependency graph
