github packages try

--- a/pom.xml
+++ b/pom.xml
@@ -97,7 +97,8 @@
                         </platforms>
                     </from>
                     <to>
-                        <image>registry.hub.docker.com/tdadarkangel/${project.artifactId}:${project.version}</image>
+                        <!-- <image>registry.hub.docker.com/tdadarkangel/${project.artifactId}:${project.version}</image> -->
+                        <image>docker.pkg.github.com/tdadarkangel/student-space-backend/${project.artifactId}:${project.version}</image>
                         <auth>
                             <username>${dockerusername}</username>
                             <password>${dockerpassword}</password>
