--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,7 @@
         <dockerusername>${env.DOCKER_USERNAME}</dockerusername>
         <!--suppress UnresolvedMavenProperty -->
         <dockerpassword>${env.DOCKER_USERNAME}</dockerpassword>
+        <token>${env.token}</token>
     </properties>
     <dependencies>
         <dependency>
