--- a/pom.xml
+++ b/pom.xml
@@ -99,7 +99,7 @@
                     </from>
                     <to>
                         <!-- <image>registry.hub.docker.com/tdadarkangel/${project.artifactId}:${project.version}</image> -->
-                        <image>docker.pkg.github.com/adrianhuszka/student-space-backend/${project.artifactId}:${project.version}</image>
+                        <image>ghcr.io/adrianhuszka/student-space-backend/${project.artifactId}:${project.version}</image>
                         <auth>
                             <username>adrianhuszka</username>
                             <password>${token}</password>
