--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -32,3 +32,13 @@ jobs:
       # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
       - name: Update dependency graph
         uses: advanced-security/maven-dependency-submission-action@571e99aab1055c2e71a1e2309b9691de18d6b7d6
+
+  triggerUpdate:
+    name: Trigger Update
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Call Webhook
+        uses: distributhor/workflow-webhook
+        with:
+          webhook_url: ${{ secrets.WEBHOOK_URL }}
