--- a/news-service/pom.xml
+++ b/news-service/pom.xml
@@ -11,7 +11,7 @@
 
     <groupId>hu.StudentSpace</groupId>
     <artifactId>news-service</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>0.1</version>
 
     <properties>
         <maven.compiler.source>21</maven.compiler.source>
